Added more to the specification, modified endpoints
